--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,8 +51,7 @@ jobs:
 
       - name: Get contributors
         env:
-          GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
-          GH_TOKEN: ${{ github.token }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           CONTRIBUTORS=$(gh api repos/${{ github.repository }}/contributors --jq 'map(.login) | join(", @")')
           echo "CONTRIBUTORS=@$CONTRIBUTORS" >> $GITHUB_ENV
