--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
 name: Docker Image
-description: Build and push Docker images to GitHub Container registry
+description: Build and push Docker images to GitHub Container registry easly
 inputs:
   git_token:
     description: "Git token"
