--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "rel": "standard-version --sign --release-as patch --tag-prefix 'docker-trigger@'",
     "release": "standard-version --sign --release-as patch --tag-prefix 'docker-trigger@' "
   },
   "keywords": [],
