--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,44 +1,51 @@
 name: Docker trigger
 on:
-  push:
-    tags:
-      - 'docker-trigger@*.*.*'
-  pull_request:
-    types: [closed]
-    branches:
-      - main
-    paths:
-      - 'devOps/actions/docker-trigger/**'
-env:
-  RELEASE_NAME: docker-trigger
-  GIT_TOKEN: ${{ github.token }}
+    push:
+        tags:
+          - 'v*.*.*'
 jobs:
-  release-version:
-    name: Release Version
+  build-docker-image:
+    name: Build Docker Image
     runs-on: ubuntu-latest
-    environment: release
-    if: github.event_name == 'pull_request' && github.event.pull_request.merged==true
     outputs:
-      release_version: ${{ steps.release_trigger.outputs.release_version }}
-      pr_log: ${{ steps.release_trigger.outputs.pr_log }}
+      release_version: ${{ steps.version.outputs.version }}
+      pr_log: ${{ steps.pr-log.outputs.pr-log }}
+      commit_log: ${{ steps.pr-log.outputs.commit_log }}
     steps:
       - uses: actions/checkout@v4.1.7
-      - name: setup node
-        id: release_trigger
-        uses: mitch1009/release-trigger@v1.0.2
-        with:
-          git_user_email: ${{env.GIT_USER_EMAIL}} 
-          git_username: ${{env.GIT_USERNAME }}   
-          gpg_private_key: ${{env.GLOBAL_GPG_SECRET}}  
-          gpg_passphrase: ${{env.GLOBAL_GPG_PASSPHRASE}}
-          git_token: ${{env.GIT_TOKEN}}
-          bump_script: "release"
-          release_branch: "main"
-          version_file_path: "package.json"
-  create-release:     
+      - name: Build and Push Docker Image
+        run: |
+            echo "standing by mode"
+      - name: get the versin from package.json
+        id: version
+        run: |
+          version=$(jq -r ".version" package.json)
+          echo "version=${version}"
+          echo "version=${version}" >> $GITHUB_OUTPUT
+      - name: Get PR titles and authors
+        id: pr-log
+        env:
+          GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
+        run: |
+          PREVIOUS_TAG=$(git describe --tags --always --abbrev=0 HEAD^)
+          PR_LOG=$(gh pr list --search "is:merged merged:>$(git log -1 --format=%aI $PREVIOUS_TAG)" --json title,author --jq '.[] | " \n - [x] " + .title + " by @" + .author.login' | tr '\n' ', ')
+          echo "PR_LOG<<EOF" >>   $GITHUB_ENV
+          echo "$PR_LOG" >> $GITHUB_ENV
+          echo "EOF" >> $GITHUB_ENV
+          echo "pr-log=$PR_LOG" >> $GITHUB_OUTPUT
+
+          # extract all commit logs from the last tag
+          git log --pretty=format:"%s" $PREVIOUS_TAG..HEAD
+          # format the commit logs
+          git log --pretty=format:"%s" $PREVIOUS_TAG..HEAD | sed 's/^/- /g'
+          echo "commit_log"=$(git log --pretty=format:"%s" $PREVIOUS_TAG..HEAD | sed 's/^/- /g') >> $GITHUB_OUTPUT
+          
+  create-new-release:
     name: Create New Release 🎉
     runs-on: ubuntu-latest
-    needs: [release-version]
+    needs: [build-docker-image]
+    # check if there is a new tag
+    
     permissions:
       contents: write
       id-token: write
@@ -49,17 +56,26 @@ jobs:
         uses: actions/checkout@v4.1.7
         with:
           fetch-depth: 0  # Fetch all history for all tags and branches
-      
-      - name: Create Release
-      
+
+      - name: Get contributors
+        env:
+          GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
         run: |
-          gh release create v${{ needs.release-version.outputs.release_version }} \
-            --title "v${{ needs.release-version.outputs.release_version }}" \
+          CONTRIBUTORS=$(gh api repos/${{ github.repository }}/contributors --jq 'map(.login) | join(", @")')
+          echo "CONTRIBUTORS=@$CONTRIBUTORS" >> $GITHUB_ENV
+
+      - name: Create Release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
+        run: |
+          gh release create v${{ needs.build-docker-image.outputs.release_version }} \
+            --title "v${{ needs.build-docker-image.outputs.release_version }}" \
             --notes "## 🎍 What's new in this release:
 
-            ${{ needs.release-version.outputs.pr_log }}
+            ${{ needs.build-docker-image.outputs.commit_log }}
             
             ## 🙏🏾 Thank You:
+
             A big thank you to all our amazing engineers and maintainers
             "
            
