[e5ebbcb] New Docker Trigger Action release

--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@mitch1009/docker-trigger",
-  "version": "1.0.11",
+  "version": "1.0.12",
   "description": "docker trigger action",
   "main": "index.js",
   "scripts": {
     "rel": "standard-version --sign --release-as patch --tag-prefix 'docker-trigger@'",
     "rel:v": "standard-version --release-as patch",
+    "rel:local": "standard-version --release-as patch --tag-prefix 'docker-trigger@'",
     "release": "standard-version --sign --release-as patch --tag-prefix 'docker-trigger@' "
   },
   "keywords": [],
