--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,7 +4,6 @@ on:
         tags:
           - 'v*.*.*'
 jobs:
-
   create-new-release:
     name: Create New Release 🎉
     runs-on: ubuntu-latest
@@ -16,11 +15,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4.1.7
         with:
-          fetch-depth: 0  # Fetch all history for all tags and branches
+          fetch-depth: 0
 
       - name: Create Release
         env:
           GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
+          GH_TOKEN: ${{ secrets.GIT_TOKEN }}
         run: |
           gh release create v$(jq -r ".version" package.json) \
             --title "v$(jq -r ".version" package.json)" \
