--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,6 +3,13 @@ on:
     push:
         tags:
           - 'v*.*.*'
+env:
+  GH_TOKEN: ${{ secrets.GIT_TOKEN }}
+  GITHUB_TOKEN: ${{ github.token }}
+permissions:
+  contents: write
+  id-token: write
+  pull-requests: write
 jobs:
   create-new-release:
     name: Create New Release 🎉
@@ -18,9 +25,6 @@ jobs:
           fetch-depth: 0
 
       - name: Create Release
-        env:
-          GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
-          GH_TOKEN: ${{ secrets.GIT_TOKEN }}
         run: |
           gh release create v$(jq -r ".version" package.json) \
             --title "v$(jq -r ".version" package.json)" \
